# configure-genrule-rootdirs-repro

./: .bazelignore  .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/cli/: config.yaml
pkgs/foo-lib/: BUILD.bazel  package.json  tsconfig.json
pkgs/foo-lib/src/: index.ts
tools/: tools.lock.json
