load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:generation_mode update
# gazelle:js_tsconfig enabled
# gazelle:js_npm_package enabled
# gazelle:js_npm_package_target_name pkg
# gazelle:js_project_naming_convention typescript
# gazelle:js_package_rule_kind js_library

npm_link_all_packages(name = "node_modules")

js_library(
    name = "pkg",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)
